# PyMLR

./: CSE_416_HW5_Kaggle.ipynb  PyMLR.py  README.md  pyproject.toml  setup.py
Examples/: CSE_416_HW5_Kaggle.ipynb  Example_CatBoost_auto.ipynb  Example_ElasticNetCV.ipynb  Example_GradientBoostingRegressor_auto.ipynb  Example_KNeighborsRegressor_auto.ipynb  Example_Lasso.ipynb  Example_LightGBM.ipynb  Example_LinearRegression_auto.ipynb  Example_LogisticRegression_binomial.ipynb  Example_LogisticRegression_multinomial.ipynb  Example_Model_Agnostic.ipynb  Example_Preprocessing.ipynb  Example_RandomForestRegressor_auto.ipynb  Example_Ridge.ipynb  Example_SVR_auto.ipynb  Example_Salish_Sea_pH_vs_DO.ipynb  Example_Stacking.ipynb  Example_Stepwise.ipynb  Example_XGBoost_auto.ipynb  PyMLR_kaggle_bank_marketing_classification.ipynb  PyMLR_kaggle_melting_point.ipynb  README.md  SalishCruise_2008to2024_forQC_07232025_basins.csv  SalishCruise_seacarb_2008to2024_07232025_basins.csv  SalishCruises_2008to2018_MeasCalcParamsToNCEI_12162024.csv  SalishCruises_Regression_of_OmegaAra.ipynb  SalishCruises_Regression_of_pH.ipynb
