[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMLR"
version = "1.2.212"
authors = [
    { name = "Greg Pelletier" }
]
description = "A modular machine learning regression and classification toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0,<3.0",
    "pandas",
    "statsmodels",
    "seaborn",
    "scikit-learn>=1.0.0,<1.6.0",
    "tabulate",
    "matplotlib",
    "xgboost>=1.7.6",
    "lightgbm>=4.3.0",
    "catboost>=1.2.2",
    "mlxtend",
    "optuna",
    "shap"
]

[tool.setuptools]
py-modules = ["PyMLR"]

[tool.setuptools.dynamic]
version = { attr = "PyMLR.__version__" }
